@@ -1,3 +1,12 @@
+1997-11-28  Tim Pierce  <twp@skepsis.com>
+
+	* boot-9.scm (find-and-link-dynamic-module): If a .la file
+	(libtool support file) is found in a module directory, attempt to
+ 	extract the shared library name from that file.  If the .la file
+	does not exist, try to link against a .so file.  Libtool-generated
+	compiled modules should load more cleanly in Guile now.
+	(try-using-libtool-name, try-using-sharlib-name): New functions.
+
 Sun Nov  9 06:10:59 1997  Gary Houston  <ghouston@actrix.gen.nz>
 
 	* boot-9.scm (set-batch-mode?!, batch-mode?): initialize more
